release/kubernetes-manifests-all.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: tictac
spec:
  replicas: 1
  selector:
    matchLabels:
      app: tictac
  template:
    metadata:
      labels:
        app: tictac
    spec:
      volumes:
        - name: ms-postgresdb-storage
          persistentVolumeClaim:
            claimName: titac-pvc
      containers:
        - image: postgres:9.6.3
          name: my-database
          ports:
          - containerPort: 5432
          resources:
            limits:
              cpu: "100m"
              memory: "80Mi"
          volumeMounts:
          - mountPath: /var/lib/postgresql/data
            name: ms-postgresdb-storage
        - name: tictac
          image: ghcr.io/cage1016/ms-sample-tictac:v0.1.0
          ports:
          - containerPort: 10121
          readinessProbe:
            exec:
              command: ["/layers/cage1016_github-assets-cnb/grpc-ecosystem_grpc-health-probe/bin/grpc_health_probe", "-addr=:10121"]
            initialDelaySeconds: 5
          livenessProbe:
            exec:
              command: ["/layers/cage1016_github-assets-cnb/grpc-ecosystem_grpc-health-probe/bin/grpc_health_probe", "-addr=:10121"]
            initialDelaySeconds: 10
          resources:
            requests:
              cpu: 0
---
kind: Service
apiVersion: v1
metadata:
  name: tictac
spec:
  selector:
    app: tictac
  ports:
    - port: 80
      name: http
      targetPort: 10120
    - port: 8000
      name: grpc
      targetPort: 10121
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: add
spec:
  replicas: 1
  selector:
    matchLabels:
      app: add
  template:
    metadata:
      labels:
        app: add
    spec:
      containers:
        - name: add
          image: ghcr.io/cage1016/ms-sample-add:v0.1.0
          ports:
            - containerPort: 10021
          readinessProbe:
            exec:
              command: ["/layers/cage1016_github-assets-cnb/grpc-ecosystem_grpc-health-probe/bin/grpc_health_probe", "-addr=:10021"]
            initialDelaySeconds: 5
          livenessProbe:           
            exec:
              command: ["/layers/cage1016_github-assets-cnb/grpc-ecosystem_grpc-health-probe/bin/grpc_health_probe", "-addr=:10021"]
            initialDelaySeconds: 10              
          resources:
            requests:
              cpu: 0
---
kind: Service
apiVersion: v1
metadata:
  name: add
spec:
  selector:
    app: add
  ports:
    - port: 80
      name: http
      targetPort: 10020
    - port: 8000
      name: grpc
      targetPort: 10021
